--- a/css/style.scss
+++ b/css/style.scss
@@ -36,16 +36,26 @@ body{
 header{
     background-image:url(../images/pexels-photo.jpg);
     background-size: cover;
-    height: 500px;
+    margin: 0 auto;
+    height: 250px;
     width: 100%;
+    background-position: center center;
         .site-title{
-            font-size: 4em;
-            padding-top: 23px;
+            font-size: 2em;
+            padding-top: 15px;
         }
-        span{
-            display: block;
+        h2{
+            font-size: 1.5rem;
+        }
+}
+@media(min-width: 769px){
+    header{
+        height: 500px;
+        font-size: 3rem;
+        h2{
             font-size: 2.5rem;
         }
+    }
 }
 
 #countries{
@@ -55,9 +65,17 @@ header{
         display: block;
         clear: both;
     }
-    h2{
-        font-size: 2rem;
+    h3{
+        font-size: 3rem;
         padding: 7px;
+    }
+    .container{
+        @include display-flex;
+        justify-content: space-between;
+        @include flex-direction(column);
+        p{
+            text-align: justify;
+        }
     }
 }
 
@@ -69,12 +87,23 @@ header{
     h3{
         font-size: 2.5rem;
     }
+    h4{
+        font-size: 1.7rem;
+        padding-bottom: 8px;
+    }
 }
 
 @media(min-width: 769px){
     #countries{
+        .container{
+            @include flex-direction(row);
+            justify-content: space-between;
+        }
         .country-box{
             width: (100% / 3);
+        }
+        h3{
+            font-size: 3rem;
         }
     }
 }
@@ -109,7 +138,7 @@ header{
                     -moz-box-shadow: 0px 4px rgba(0,0,0,0.6);
     }
     a:hover{
-        background-color: lighten($baseColor, 5%);
+        background-color: lighten($baseColor, 9%);
         box-shadow: 0px 4px rgba(0,0,0,0.5);
                     -webkit-box-shadow: 0px 4px rgba(0,0,0,0.5);
                     -moz-box-shadow: 0px 4px rgba(0,0,0,0.5);
